2006-08-27 [colin]	0.6.0cvs6

	* src/plugin.c
		Implement plugin_provides()

2006-08-18 [paul]	0.6.0cvs5

	* configure.ac
		bump up GLib and GTK+ minimum required versions,
		following Claws

2006-08-17 [colin]	0.6.0cvs4

	* src/feed.c
	* src/feed.h
		Don't check SSL certificate (CURL default changed since 7.10)
		Better error report

2006-08-17 [colin]	0.6.0cvs3

	* src/feed.c
		Fix header encoding - header_len is the length
		of the prefixing header name, like 'Subject: ',
		not the actual content's length. Fixes infinite
		loops in codeconversion.

2006-08-08 [paul]	0.6.0cvs2

	* src/feed.h
		fix non-translation of strings
	* src/rssyl_cb_menu.c
		use gettext plural forms

	Both patches by "Fabien Vantard" <fzzzzz@gmail.com>

2006-08-03 [colin]	0.6.0cvs1

	* src/feed.c
		Add base href header for use in Dillo 
		or gtkhtml2_viewer

2006-08-02 [paul]	0.6.0

	0.6 released

2006-07-02 [ticho]	0.5.0cvs10

	* src/feed.c
	* src/feed.h
		Remove curltmpXXXXXX file at another code path.
		Announce feed updates in log window.					

2006-07-02 [ticho]	0.5.0cvs9

	* src/feed.c
	* src/feed.h
		Remove curltmpXXXXXX file at another code path.
		Announce feed updates in log window.

2006-07-02 [wwp]	0.5.0cvs9

	* src/rssyl_prefs.c
		Typo.

2006-07-02 [ticho]	0.5.0cvs8

	* po/sk.po
	* src/feed.h
	* src/rssyl.h
		Some i18n-related changes.
		Updated Slovak translation.

2006-07-02 [ticho]	0.5.0cvs7

	* src/rssyl_prefs.c
	* src/rssyl_prefs.h
		Actually add new source files. :)

2006-07-02 [ticho]	0.5.0cvs6

	* src/feed.c
	* src/feed.h
		Use less types of error messages.

2006-07-02 [ticho]	0.5.0cvs5

	* po/POTFILES.in
	* src/Makefile.am
	* src/feed.c
	* src/feed.h
	* src/feedprops.c
	* src/rssyl.c
	* src/rssyl.h
	* src/rssyl_gtk.c
		Added Common Preferences page for RSSyl.
		Configurable fetch timeout for feeds.
		Better error reporting to network log.
		Remove a leftover curltmpXXXXXX file on one more code path.

2006-06-26 [ticho]	0.5.0cvs4

	* src/parsers.c
	* src/rssyl_gtk.c