@@ -23,3 +23,4 @@
 ( cvs diff -u -r 1.1.2.44 -r 1.1.2.45 src/feed.c;  cvs diff -u -r 1.1.2.14 -r 1.1.2.15 src/feed.h;  ) > 0.6.0cvs4.patchset
 ( cvs diff -u -r 1.1.2.70 -r 1.1.2.71 configure.ac;  ) > 0.6.0cvs5.patchset
 ( cvs diff -u -r 1.1.2.14 -r 1.1.2.15 src/plugin.c;  ) > 0.6.0cvs6.patchset
+( cvs diff -u -r 1.1.2.10 -r 1.1.2.11 src/rssyl.c;  cvs diff -u -r 1.1.2.9 -r 1.1.2.10 src/rssyl_cb_menu.c;  cvs diff -u -r 1.1.2.2 -r 1.1.2.3 src/rssyl_cb_menu.h;  cvs diff -u -r 1.1.2.15 -r 1.1.2.16 src/rssyl_gtk.c;  ) > 0.6.0cvs7.patchset
